syntax = "proto3";

package pb;

import "google/protobuf/any.proto";
// import "authorization.proto";
import "client.proto";
import "jwk.proto";
// import "token.proto";
import "user.proto";

option go_package = "github.com/dritelabs/accounts/pb";

service Account {
  rpc AuthenticateUser(AuthenticateUserRequest) returns (AuthenticateUserResponse);
  // rpc Authorize(AuthorizationRequest) returns (AuthorizationResponse);
  // rpc CreateAuthorization (CreateAuthorizationRequest) returns (CreateAuthorizationResponse);
  // rpc Token(TokenRequest) returns (TokenResponse);
  // rpc CreateAuthorization(CreateAuthorizationRequest) returns (AuthorizationResponse);
  rpc CreateClient(CreateClientRequest) returns (Client);
  // rpc CreateToken(CreateTokenRequest) returns (TokenResponse);
  rpc CreateUser (CreateUserRequest) returns (User);
  // rpc DeleteClient (DeleteClientRequest) returns (ClientResponse);
  // rpc DeleteUser (DeleteUserRequest) returns (UserResponse);
  rpc GetClient (GetClientRequest) returns (Client);
  rpc ListClients (ListClientsRequest) returns (ListClientsResponse);
  rpc GetJwks (GetJwksRequest) returns (google.protobuf.Any);
  // rpc GetUser (GetUserRequest) returns (UserResponse);
  // rpc GetUsers (GetUsersRequest) returns (UsersResponse);
  // rpc UpdateClient (UpdateClientRequest) returns (ClientResponse);
  // rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
  // rpc VerifyAuthorization (VerifyAuthorizationRequest) returns (VerifyAuthorizationResponse);
}
